Add UserFavourite controller
Introduces a new UserFavourite controller with Index and Error actions, including basic logging support.

--- a/.gitignore
+++ b/.gitignore
@@ -25,12 +25,7 @@ Thumbs.db
 *.cache
 
 #Backend Debug
-Backend/Debug/
-Backend/obj/Debug/
-Backend/bin/Debug/
-
-#Build folders
-Backend/bin/
-Backend/obj/
-
+/Backend/Debug/
+/Backend/obj/Debug/
+/Backend/bin/Debug/
 /Backend/obj
