Add JWT configuration to appsettings.json
Introduced JwtConfig section with issuer, audience, key, and token validity settings to support JWT authentication.

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=ETM.db"
   },
+  "JwtConfig":{
+    "Issuer":"http://localhost:5079",
+    "Audience":"http://localhost:5079",
+    "Key":"WRm9AyCgt5-kT9KS68uMjOlajhYB34vmvntOs1ixx-U",
+    "TokenValidityInMinutes":30
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
