--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "serve dist -s -p ${PORT:-8080}"
+    "start": "serve dist -s -l 0.0.0.0 -p ${PORT:-8080}"
   },
   "dependencies": {
     "react": "^19.2.0",
